# ARX_X5-teach_replay-imitation_learning

./: .gitignore  LICENSE  README.md  Readme1.md
.github/: copilot-instructions.md
00-readme/tools/: 01_global_nopasswd_sudo.sh.x  02_apt_update_upgrade.sh.x  03_install_common_packages.sh.x
00-sh/ROS2/: 04single_arm.sh
00-sh/ROS2/AC_one/: 01make.sh  03collect.sh  04joint_control.sh  05pos_control.sh  collect.desktop
ARX_CAN/: arx_can.rules  can.sh
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/config/: arm_config.yaml
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/include/arx_x5_controller/: X5Controller.hpp
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/launch/x5_v1/: open_remote_master.launch
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/launch/x5_v2/: v2_collect.launch  v2_joint_control.launch  v2_pos_control.launch  v2_single_arm.launch  v2_vr_single_arm.launch
ROS/X5_ws/src/ARX_X5_ros_V7/arx_x5_controller/src/: X5Controller.cpp
ROS2/X5_ws/src/arx_x5_ros2/arx_x5_controller/src/: X5Controller.cpp
arx_joy/src/arx_joy/: CMakeLists.txt  package.xml
arx_joy/src/arx_joy/src/: arx_joy.cpp
docs/: README.md
docs/images/: .gitkeep
py/arx_x5_python/: setup.sh  test_keyboard.py  test_kinematic_solver.py
py/arx_x5_python/bimanual/: CMakeLists.txt  __init__.py
py/arx_x5_python/bimanual/script/: single_arm.py
robomimic/: setup.py
